# Terrain-Generator

./: CMakeLists.txt  CMakePresets.json  Camera.cpp  Camera.hpp  LightPos.cpp  LightPos.hpp  README.md  TerrainShader.cpp  TerrainShader.hpp  main.cpp  terrain.cpp  terrain.hpp  water.cpp  water.hpp
shaders/terrain/: terrain.geom
shaders/water/: water.frag
